NEW Benchmarking w/ spicialized simulation & circuit characteristics

--- a/examples/QAOA_portfolio_optimization.ipynb
+++ b/examples/QAOA_portfolio_optimization.ipynb
@@ -36,16 +36,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
    "id": "c3de09e7-5315-4170-8263-6041a7819fac",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "ExecuteTime": {
+     "end_time": "2025-06-01T11:04:13.980754Z",
+     "start_time": "2025-06-01T11:04:11.660663Z"
+    }
    },
-   "outputs": [],
    "source": [
     "import numpy as np\n",
     "from qokit.portfolio_optimization import get_problem"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -58,63 +62,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
    "id": "57544f68-6538-4dda-a47b-254252caa54a",
    "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "YF.download() has changed argument auto_adjust default to True\n"
-     ]
+    "tags": [],
+    "ExecuteTime": {
+     "end_time": "2025-06-01T11:05:21.716362Z",
+     "start_time": "2025-06-01T11:05:21.677549Z"
     }
-   ],
+   },
    "source": [
     "po_problem = get_problem(N=6,K=3,q=0.5,seed=1,pre=1)\n",
     "means_in_spins = np.array([po_problem['means'][i] - po_problem['q'] * np.sum(po_problem['cov'][i, :]) for i in range(len(po_problem['means']))])\n",
     "scale = 1 / np.sqrt(np.mean((( po_problem['q']*po_problem['cov'])**2).flatten())+np.mean((means_in_spins**2).flatten()))"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 14
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
    "id": "e49f9152-e49c-4cbd-a2b3-20894a927a9a",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "ExecuteTime": {
+     "end_time": "2025-06-01T11:05:23.467922Z",
+     "start_time": "2025-06-01T11:05:23.432839Z"
+    }
    },
-   "outputs": [],
    "source": [
     "po_problem = get_problem(N=6,K=3,q=0.5,seed=1,pre=scale)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 15
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
    "id": "a800d2c6-d7a9-449a-befc-e1620676847e",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "ExecuteTime": {
+     "end_time": "2025-06-01T11:05:25.722350Z",
+     "start_time": "2025-06-01T11:05:25.687184Z"
+    }
    },
-   "outputs": [],
    "source": [
     "po_problem2 = get_problem(N=6,K=3,q=0.5,seed=1,pre='rule')"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 16
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
    "id": "60942736-20e4-4519-a584-65f613b7bddf",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "ExecuteTime": {
+     "end_time": "2025-06-01T11:05:31.317932Z",
+     "start_time": "2025-06-01T11:05:31.314841Z"
+    }
    },
-   "outputs": [],
    "source": [
     "# confirm that the scaling rule in the function matches the one above\n",
     "assert np.allclose(po_problem['cov'], po_problem2['cov'])\n",
     "assert np.allclose(po_problem['means'], po_problem2['means'])"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 17
   },
   {
    "cell_type": "markdown",
@@ -126,65 +138,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
    "id": "c4cb1e0a-f0eb-48e4-a1dc-8d342462c156",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "ExecuteTime": {
+     "end_time": "2025-06-01T11:05:33.100733Z",
+     "start_time": "2025-06-01T11:05:33.097649Z"
+    }
    },
-   "outputs": [],
    "source": [
     "from qokit.portfolio_optimization import portfolio_brute_force, get_sk_ini\n",
     "from qokit.qaoa_objective_portfolio import get_qaoa_portfolio_objective"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 18
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
    "id": "1fa46296-89cb-40e7-aaf8-09b708eda12d",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "ExecuteTime": {
+     "end_time": "2025-06-01T11:05:34.296518Z",
+     "start_time": "2025-06-01T11:05:34.261226Z"
+    }
    },
-   "outputs": [],
    "source": [
     "p = 1\n",
     "qaoa_obj = get_qaoa_portfolio_objective(po_problem=po_problem,p=p,ini='dicke',mixer='trotter_ring',T=1,simulator='python')\n",
     "best_portfolio = portfolio_brute_force(po_problem,return_bitstring=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "4bb70cb8-db79-45b3-b808-96b7d6647b68",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "x0 = get_sk_ini(p=p) \n",
-    "# Alternative: random initial point# x0 = np.random.rand(2*p)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "238479eb-db75-4e19-a159-36a2bed9c2ae",
-   "metadata": {
-    "tags": []
-   },
+   ],
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "energy = -0.01653966594056647, Approximation ratio = 0.6316878993334034\n"
+     "ename": "KeyError",
+     "evalue": "'J'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mKeyError\u001B[39m                                  Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[19]\u001B[39m\u001B[32m, line 2\u001B[39m\n\u001B[32m      1\u001B[39m p = \u001B[32m1\u001B[39m\n\u001B[32m----> \u001B[39m\u001B[32m2\u001B[39m qaoa_obj = \u001B[43mget_qaoa_portfolio_objective\u001B[49m\u001B[43m(\u001B[49m\u001B[43mpo_problem\u001B[49m\u001B[43m=\u001B[49m\u001B[43mpo_problem\u001B[49m\u001B[43m,\u001B[49m\u001B[43mp\u001B[49m\u001B[43m=\u001B[49m\u001B[43mp\u001B[49m\u001B[43m,\u001B[49m\u001B[43mini\u001B[49m\u001B[43m=\u001B[49m\u001B[33;43m'\u001B[39;49m\u001B[33;43mdicke\u001B[39;49m\u001B[33;43m'\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43mmixer\u001B[49m\u001B[43m=\u001B[49m\u001B[33;43m'\u001B[39;49m\u001B[33;43mtrotter_ring\u001B[39;49m\u001B[33;43m'\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43mT\u001B[49m\u001B[43m=\u001B[49m\u001B[32;43m1\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43msimulator\u001B[49m\u001B[43m=\u001B[49m\u001B[33;43m'\u001B[39;49m\u001B[33;43mpython\u001B[39;49m\u001B[33;43m'\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[32m      3\u001B[39m best_portfolio = portfolio_brute_force(po_problem,return_bitstring=\u001B[38;5;28;01mFalse\u001B[39;00m)\n",
+      "\u001B[36mFile \u001B[39m\u001B[32m~/PycharmProjects/QOKit/qokit/qaoa_objective_portfolio.py:46\u001B[39m, in \u001B[36mget_qaoa_portfolio_objective\u001B[39m\u001B[34m(po_problem, p, ini, mixer, T, simulator, mixer_topology)\u001B[39m\n\u001B[32m     44\u001B[39m N = po_problem[\u001B[33m\"\u001B[39m\u001B[33mN\u001B[39m\u001B[33m\"\u001B[39m]\n\u001B[32m     45\u001B[39m K = po_problem[\u001B[33m\"\u001B[39m\u001B[33mK\u001B[39m\u001B[33m\"\u001B[39m]\n\u001B[32m---> \u001B[39m\u001B[32m46\u001B[39m J = \u001B[43mpo_problem\u001B[49m\u001B[43m[\u001B[49m\u001B[33;43m\"\u001B[39;49m\u001B[33;43mJ\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m]\u001B[49m\n\u001B[32m     47\u001B[39m h = po_problem[\u001B[33m\"\u001B[39m\u001B[33mh\u001B[39m\u001B[33m\"\u001B[39m]\n\u001B[32m     48\u001B[39m gamma = ParameterVector(\u001B[33m'\u001B[39m\u001B[33mgamma\u001B[39m\u001B[33m'\u001B[39m, p) \u001B[38;5;66;03m# p is the number of QAOA layers\u001B[39;00m\n",
+      "\u001B[31mKeyError\u001B[39m: 'J'"
      ]
     }
    ],
+   "execution_count": 19
+  },
+  {
+   "cell_type": "code",
+   "id": "4bb70cb8-db79-45b3-b808-96b7d6647b68",
+   "metadata": {
+    "tags": [],
+    "ExecuteTime": {
+     "end_time": "2025-06-01T11:05:37.249955Z",
+     "start_time": "2025-06-01T11:05:37.236521Z"
+    }
+   },
+   "source": [
+    "x0 = get_sk_ini(p=p) \n",
+    "# Alternative: random initial point# x0 = np.random.rand(2*p)"
+   ],
+   "outputs": [],
+   "execution_count": 20
+  },
+  {
+   "cell_type": "code",
+   "id": "238479eb-db75-4e19-a159-36a2bed9c2ae",
+   "metadata": {
+    "tags": [],
+    "ExecuteTime": {
+     "end_time": "2025-06-01T11:05:39.460827Z",
+     "start_time": "2025-06-01T11:05:39.438887Z"
+    }
+   },
    "source": [
     "po_energy = qaoa_obj(x0).real\n",
     "po_ar = (po_energy-best_portfolio[1])/(best_portfolio[0]-best_portfolio[1])\n",
     "print(f\"energy = {po_energy}, Approximation ratio = {po_ar}\")"
-   ]
+   ],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'qaoa_obj' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mNameError\u001B[39m                                 Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[21]\u001B[39m\u001B[32m, line 1\u001B[39m\n\u001B[32m----> \u001B[39m\u001B[32m1\u001B[39m po_energy = \u001B[43mqaoa_obj\u001B[49m(x0).real\n\u001B[32m      2\u001B[39m po_ar = (po_energy-best_portfolio[\u001B[32m1\u001B[39m])/(best_portfolio[\u001B[32m0\u001B[39m]-best_portfolio[\u001B[32m1\u001B[39m])\n\u001B[32m      3\u001B[39m \u001B[38;5;28mprint\u001B[39m(\u001B[33mf\u001B[39m\u001B[33m\"\u001B[39m\u001B[33menergy = \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mpo_energy\u001B[38;5;132;01m}\u001B[39;00m\u001B[33m, Approximation ratio = \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mpo_ar\u001B[38;5;132;01m}\u001B[39;00m\u001B[33m\"\u001B[39m)\n",
+      "\u001B[31mNameError\u001B[39m: name 'qaoa_obj' is not defined"
+     ]
+    }
+   ],
+   "execution_count": 21
   },
   {
    "cell_type": "markdown",
